<resources>
    <string name="app_name">UI</string>
    <string name="title_activity_own">OwnActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reg_text">Увійдіть в свій обліковий запис!</string>
    <string name="btnLogin">Login</string>
    <string name="btnReg">Register</string>
    <string name="notRegistered">You are not a member?</string>
    <string name="tvReg">Register.</string>
    <string name="autorization">Hello There!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tvRegister">Register</string>
    <string name="email">E-mail</string>
    <string name="password1">Confirm password</string>

    <string name="otTitle">Оперний театр</string>
    <string name="hcTitle">Високий замок</string>
    <string name="ysTitle">Собор Святого Юра</string>
    <string name="ppTitle">Палац Потоцьких</string>
    <string name="rtTitle">Львівська Ратуша</string>
    <string name="otText">
        Львівський національний академічний театр опери та балету імені Соломії Крушельницької — театр опери і балету у Львові,
        розташований в історичному центрі міста на проспекті Свободи, 28 та названий на честь відомої
        української оперної співачки Соломії Крушельницької. Будівництво театру розпочалось у червні 1897 року за проектом архітектора Зиґмунта Ґорґолевського — автора багатьох монументальних споруд Польщі і Німеччини.
        Відкрився театр для глядача 4 жовтня 1900 р. прем\'єрою лірико-драматичної опери «Янек» Владислава Желенського — про життя карпатських верховинців. Головну партію співав український тенор Олександр Мишуга. В урочистому відкритті взяли участь письменник Генрик Сенкевич, композитор Ігнацій Ян Падеревський та делегації з різних європейських театрів.
    </string>
    <string name="hcText">
        Висо́кий За́мок — замок, збудований під керівництвом Короля Русі Лева Даниловича, потім — польського короля Казимира III на Замковій горі у Львові. Майже повністю розібраний протягом XIX століття.
        За архівними документами і науковою літературою Високий та Низький замки у Львові виникли в часи Галицько-Волинської держави. З руських літописів і пізніших хронік XVI–XVII ст. (Яна Альнпека, Мартіна Ґруневеґа, Бартоломея Зиморовича) відомо, що на Замковій горі під керівництвом князя Лева Даниловича збудували укріплення.
        Вони були дерев\'яно-земляними, як і переважна більшість руських градів. 1259 року на вимогу хана Бурундая, укріплення були розібрані, але в 1270 році відбудовані наново. Львівський історик Бартоломей Зиморович вважав цей рік датою первісного будівництва фортифікацій на Замковій горі.
        У 1340 році, коли Львів вперше був захоплений Казимиром ІІІ, за словами хроніста Яна Длуґоша, було спалено дерев\'яний замок. Повторно швидкоруч відновлений замок був спалений литовцями у 1353 році.
        Новий мурований замок постав на Замковій горі наприкінці XIV століття, очевидно, вже після остаточного захоплення руських земель Польщею 1387 року. Він став резиценцією королівського старости й залоги. Його використовували також як в\'язницю. Тут, зокрема, перебували полонені в битві під Ґрюнвальдом у 1410 році німецькі лицарі, згодом утримували княжну Гальшку Острозьку.
    </string>
    <string name="ysText">
        Архикатедра́льний собо́р свято́го Ю́ра (давніше катедральна церква святого Юра[4]) у Львові — собор Галицької митрополії УГКЦ, до 1817 при монастирі Чину св. Василія Великого, бароково-рококовий монументальний архітектурний ансамбль з виразними національними рисами (1744–1762), вважався головною святинею українських греко-католиків, до побудови Патріаршого собору Воскресіння Христового в Києві.
        Розташований на Святоюрській горі, за адресою: площа Святого Юра № 5. Висота над рівнем моря — 321 метр[5].
        З 1998 року Собор разом із Ансамблем історичного центру Львова належить до Світової спадщини ЮНЕСКО. Власне собор є частиною комплексу: барокового собору (1745–1770) з дзвіницею (дзвін з 1341), рококової з класицистичними портиками митрополичої палати (1761–1762), будинків капітули, тераси з двораменними сходами, ажурної огорожі довкола соборового подвір\'я з двома брамами в подвір\'ї (1771) та мурів, що обводять капітульні будинки і митрополичі сади (1772).
        Багатовікову архітектурну історію Святоюрського монастиря умовно можна поділити на два великі періоди відповідно до історії його головної споруди. Перший період тривав майже півтисячоліття — від початків чернечої оселі приблизно до середини XVIII ст., — завершився руйнацією старого храму. Другий період розпочався з будівництва нового собору, яке згодом стало новою точкою відліку в цілеспрямованому формуванні майбутнього ансамблю. Завершився він у XIX ст., коли з\'явилася остання з існуючих нині будівель.
    </string>
    <string name="ppText">
        Пала́ц Пото́цьких — пам\'ятка архітектури у Львові, розташована на вулиці Коперника, 15.
        Родина Потоцьких, продавши свій палац на площі Галицькій (нині відомий як палац Бесядецьких), придбала у 1822 р. нерухомість на вулиці Широкій (нині Коперника). На планах Львова XVIII — першої половини XIX ст. на цій дільниці видно розпланований город та кілька невеликих будівель.
        Перший палац збудовано у стилі класицизму за проектом архітектора Ігнатія Хамбреза. Це була двоповерхова прямокутна в плані будівля із високим дахом. Фасад симетричний з центральним ризалітом, увінчаним аттиком з балюстрадою. Перший ярус фасаду рустований, другий ярус ризаліту декорований шістьма парами іонічних пілястр. Власниками були Марія з Сангушків та її чоловік Альфред Юзеф Потоцький. Палац було розібрано у 1860—1861 рр. Однак спорудження нової резиденції затягнулось на три десятиріччя. Будівництво розпочалось лише у 1880 р.
        Новий палац був збудований у стилі бароко, епохи французького короля Луї XIV за проектом французького архітектора Луї Альфонса Рене Довернь (фр. Louis Dauvergne). Проект модифіковано львівськими архітекторами Юліушем Цибульським та Людвіком Балдвіном-Рамултом і реалізовано під їх керівництвом. 1892 року проект експонувався на будівельній виставці у Львові.
    </string>
    <string name="rtText">
        Льві́вська ра́туша — адміністративний будинок у центральній частині Львова, на площі Ринок, 1. Ратуша протягом всього часу свого існування була місцем перебування центральної міської влади Львова. Сьогодні є резиденцією Львівської міської ради. Пам\'ятка архітектури національного значення, що належить до Світової спадщини ЮНЕСКО. Сучасна вежа львівської ратуші має висоту 65 метрів, є найвищою в Україні.
    </string>

    <string name="otAddress">пр. Свободи, 28</string>
    <string name="hcAddress">вул. Замкова</string>
    <string name="ysAddress">Площа Святого Юра, 5</string>
    <string name="ppAddress">вул. М. Коперника, 15</string>
    <string name="rtAddress">Площа Ринок, 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monuments">Monuments</string>
    <string name="must_see">Must see</string>
    <string name="food">Food Card</string>
    <string name="beer">Beer Card</string>

    <string name="monLarge">Львів - місто давніх традицій і столиця понад сотні щорічних фестивалів. Тут на кожному кроці – дивина! І при цьому всі «родзинки» Львова настільки самобутні, що врізаються в пам’ять, аби вже ніколи не поступитися місцем туристичним принадам інших українських міст.</string>

</resources>
