<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context="dimasapp.dimas.com.ui.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/light"
            android:text="Welcome!"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="40dp"
            android:alpha="0.5"
            android:fontFamily="@font/bold"
            android:text="Nice to see you again!"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:textAllCaps="false"
            android:background="@drawable/btn_login"
            android:textSize="22sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/btnLogin"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notRegistered"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/light"
            android:textColor="@color/bottom_text"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />

        <TextView
            android:paddingLeft="3dp"
            android:fontFamily="@font/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReg"
            android:layout_marginBottom="10dp"
            android:textColor="@drawable/text_click"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:id="@+id/tvReg"/>

    </LinearLayout>




</RelativeLayout>
