<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/fragment_acc"
    android:weightSum="10"
    android:background="@drawable/back2"
    tools:context="dimasapp.dimas.com.ui.fragments.HomeFragment">

    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    <ImageView
        android:id="@+id/el"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/el_logo2"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    </RelativeLayout>


    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMonuments"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/cardview"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:src="@drawable/adam"
                    app:siRadius="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="85dp"
                    android:layout_height="85dp" />
                <TextView
                    android:text="@string/monuments"
                    android:textColor="@color/dark_gray"
                    android:fontFamily="@font/light"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardMustSee"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/cardview"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:src="@drawable/theatre"
                    app:siRadius="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="85dp"
                    android:layout_height="85dp" />
                <TextView
                    android:text="@string/must_see"
                    android:textColor="@color/dark_gray"
                    android:fontFamily="@font/light"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardFood"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/cardview"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.github.siyamed.shapeimageview.CircularImageView
                    android:src="@drawable/rebernya"
                    app:siRadius="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="85dp"
                    android:layout_height="85dp" />
                <TextView
                    android:text="@string/food"
                    android:textColor="@color/dark_gray"
                    android:fontFamily="@font/light"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardBeer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/cardview"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:src="@drawable/beeer"
                    app:siRadius="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="85dp"
                    android:layout_height="85dp" />
                <TextView
                    android:text="@string/beer"
                    android:textColor="@color/dark_gray"
                    android:fontFamily="@font/light"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </GridLayout>

</LinearLayout>
